# Plutonium

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
lib/include/: Color.h  PixelBuffer.h  Vector3.h
lib/include/Core/: Color.h  Matrix3.h  Matrix4.h  MatrixStack.h  Mesh.h  PixelBuffer.h  Ray.h  Transform.h  Vector3.h  Vector4.h
lib/include/FileHandling/: OBJImporter.h
lib/include/Renderer/: ProbabilityDensityFunction.h  Renderer.h
lib/include/Scene/: BoundingBox.h  Camera.h  Material.h  RecordTypes.h  RendererCamera.h  Scene.h  Shape.h
lib/include/SceneGraph/: Camera.h  Geometry.h  SceneGraph.h  SceneGraphNode.h
lib/include/Utility/: OrthoNormalBasis.h  Utility.h
lib/src/: Vector3.cpp
lib/src/Core/: Color.cpp  Matrix3.cpp  Matrix4.cpp  MatrixStack.cpp  PixelBuffer.cpp  Ray.cpp  Transform.cpp  Vector3.cpp  Vector4.cpp
lib/src/Core/Mesh/: HalfEdgeMesh.cpp  IndexedTriangleMesh.cpp  TriangleFanMesh.cpp  TriangleStripMesh.cpp
lib/src/FileHandling/: OBJImporter.cpp
lib/src/Renderer/: BoxListProbabilityDensityFunction.cpp  BoxProbabilityDensityFunction.cpp  CosineProbabilityDensityFunction.cpp  MixtureProbabilityDensityFunction.cpp  Renderer.cpp  ShapeProbabilityDensityFunction.cpp
lib/src/Scene/: BoundingBox.cpp  Camera.cpp  RendererCamera.cpp  Scene.cpp
lib/src/Scene/Materials/: Dielectric.cpp  DiffuseLight.cpp  Lambert.cpp  Metal.cpp
lib/src/Scene/Shapes/: BVHNode.cpp  GeometryInstance.cpp  IndexedTriangleMesh.cpp  MeshRef.cpp  Rectangle.cpp  ShapeGroup.cpp  ShapeInstance.cpp  Sphere.cpp  SphereInstance.cpp  Triangle.cpp  TriangleMesh.cpp
lib/src/SceneGraph/: CameraNode.cpp  EmptyNode.cpp  Geometry.cpp  GeometryNode.cpp  MeshGeometry.cpp  Primitive.cpp  SceneGraph.cpp
lib/src/Utility/: OrthoNormalBasis.cpp  Utility.cpp
